@@ -33,10 +33,11 @@ G_BEGIN_DECLS
 #define DEF_USE_PRIMARY       FALSE
 #define DEF_SYNCHRONIZE       FALSE
 #define DEF_SHOW_INDEXES      FALSE
+#define DEF_SAVE_URIS         TRUE
 #define DEF_SAVE_HISTORY      TRUE
-#define DEF_HISTORY_LIMIT     25
+#define DEF_HISTORY_LIMIT     50
 #define DEF_SMALL_HISTORY     TRUE
-#define DEF_HISTORY_SMALL     25
+#define DEF_HISTORY_SMALL     20
 #define DEF_HYPERLINKS_ONLY   FALSE
 #define DEF_CONFIRM_CLEAR     FALSE
 #define DEF_FULL_HIST_BUTTON  FALSE
